test/functions/iterators/errors/badArgs.future
bug: internal error due to bad call to standalone iterator

This is a test motivated by issue #6337 in which we generate an
internal error because, in resolving a standalone iterator, there's a
mismatch between the formals and actuals.  It seems as though this
internal error could be changed to a user error as a starting point,
but I couldn't quickly figure out where that was happening.  Better
would be to give the user a more specific error message pointing out
that they don't need to / can't supply the iterKind argument -- that
the compiler will fill that in.
